golang-app-2/templates/rollout-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollout-destrule
spec:
  host: golang-app-2-service
  subsets:
    - name: canary   # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      labels:        # labels will be injected with canary rollouts-pod-template-hash value
        app: golang-app-2
    - name: stable   # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      labels:        # labels will be injected with stable rollouts-pod-template-hash value
        app: golang-app-2
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rollout-vsvc
spec:
  hosts:
    #host: service-name
    - golang-app-2-service
  http:
    - route:
        - destination:
            host: golang-app-2-service
            #host: service-name
            subset: stable
          weight: 100
        - destination:
            host: golang-app-2-service
            #host: service-name
            subset: canary
          weight: 0
